# financial-advisor

./: .gitignore  README.md  main.py  pyproject.toml
docs/: ARCHITECTURE.md  README.md  case.md  data-models.md  decisions.md  pipeline.md  roadmap.md
inputs/albert/: watchlist.csv
src/analysis/: calculator.py  flags.py  models.py
src/data/: market.py
src/ingestion/: models.py  parser.py  reader.py
src/llm/: models.py  recommendations.py  writer.py
src/observability/: __init__.py  llm_tracer.py  logger.py
src/prompts/: macro_analysis.py  portfolio.py  recommendations.py  risk_profile.py  writer.py
src/report/: advisor_template.html  charts.py  generator.py  poc_report_template.html  template.html
tests/analysis/: test_calculator.py  test_flags.py
tests/data/: test_market.py
tests/ingestion/: test_models.py  test_parser.py  test_reader.py
tests/llm/: test_llm.py
tests/report/: test_report.py
