[project]
name = "enter"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "openai>=1.0",
    "pydantic>=2.0",
    "httpx>=0.27",
    "pandas>=2.0",
    "yfinance>=0.2",
    "matplotlib>=3.8",
    "jinja2>=3.1",
    "playwright>=1.44",
    "python-dotenv>=1.0",
    "rapidfuzz>=3.0",
    "pdfplumber>=0.11.9",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-mock>=3.12"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = ["integration: calls real OpenAI API (deselect with -m 'not integration')"]
